--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,110 +1,87 @@
 <section class="slice sct-color-1">
-<div class="col-lg-8">
-  <div class="row justify-content-center">
-
-  <div class="container">
-<!-- Page title -->
-    <div class="page-title">
-      <div class="row align-items-center">
-        <div class="col-lg-6 col-12">
-          <h2 class="heading heading-5 text-capitalize strong-500 mb-0">
-            <a href="#" class="link text-underline--none">
-              <i class="ion-ios-arrow-back"></i> Settings
-            </a>
-          </h2>
-          <div class="col-lg-6 col-12">
-
-        </div>
-      </div>
-    </div>
-
-    <div class="link-menu link-menu--style-3 py-4 border-bottom">
-      <a href="../../pages/profile/account-settings.html">Profil</a>
-      <a href="../../pages/profile/account-orders.html" class="active">Paramètres</a>
-    </div>
-
-    <!-- Account settings -->
-    <div class="row">
-      <div class="col-lg-12">
-        <form class="form-default" data-toggle="validator" role="form">
-    <!-- Change profil picture -->
-        <div class="card no-border bg-transparent">
-          <div class="card-title px-0 pb-0 no-border">
-            <%= form_for(@user) do |form| %>
-            <h3 class="heading heading-6 strong-600">
-            Changer sa photo de profil
-            </h3>
-        </div>
-        <div class="card-body px-0">
-          <div class="row">
-            <div class="col-md-6 col-lg-4">
-              <div class="form-group">
-
-                <label>Nouvelle image</label>
-                <%= form.file_field :avatar%>                
-              </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4">
-            <div class="form-group">
-              <%= form.submit "Confirmation", :class =>"btn btn-base-1"%>
-            </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <hr class="mt-0 mb-0">
-
-    <!-- Account info -->
+	<div class="col-lg-8">
+  	<div class="row justify-content-center">
+			<div class="container">
+    		<div class="page-title">
+      		<div class="row align-items-center">
+        		<div class="col-lg-6 col-12">
+          		<h2 class="heading heading-5 text-capitalize strong-500 mb-0"><a href="#" class="link text-underline--none"><i class="ion-ios-arrow-back"></i>Settings</a></h2>
+          		<div class="col-lg-6 col-12">
+        			</div>
+      			</div>
+    			</div>
+  			  <div class="link-menu link-menu--style-3 py-4 border-bottom">
+  			    <a href="../../pages/profile/account-settings.html">Profil</a>
+  			    <a href="../../pages/profile/account-orders.html" class="active">Paramètres</a>
+  			  </div>
+  			  <div class="row">
+  			    <div class="col-lg-12">
+  		      	<div class="card no-border bg-transparent">
+  		        	<div class="card-title px-0 pb-0 no-border">
+  		          	<h3 class="heading heading-6 strong-600">Changer sa photo de profil</h3>
+  		      		</div>
+  		      		<div class="card-body px-0">
+  		            <%= form_for(@user) do |form| %>
+  		        			<div class="row">
+  		          			<div class="col-md-6 col-lg-4">
+  		            			<div class="form-group">
+  		              			<label>Nouvelle image</label>
+  		              			<%= form.file_field :avatar%>                
+  		            			</div>
+  		        				</div>
+  		        				<div class="col-md-6 col-lg-4">
+  		          				<div class="form-group">
+  		            				<%= form.submit "Confirmation", :class =>"btn btn-base-1"%>
+  		          				</div>
+  		        				</div>
+  		      				</div>
+  		      			<% end %>
+  		    			</div>
+  		  			</div>
+		    			<hr class="mt-0 mb-0">
+		    			<div class="card no-border bg-transparent">
+		      			<div class="card-title px-0 pb-0 no-border">
+		      			  <h3 class="heading heading-6 strong-600">Account info</h3>
+		        			<p class="mt-1 mb-0">Edit your email and also, your newsletter subscriptions.</p>
+		      			</div>
+		      			<div class="card-body px-0">
+		        			<div class="row align-items-center">
+		         				<div class="col-md-6 col-lg-4">
+		           				<div class="form-group">
+		              			<label class="control-label">Email</label>
+		              			<input type="email" class="form-control form-control-lg" value="name@example.com" disabled>
+		           				</div>
+		         				</div>
+		          			<div class="col-md-6 col-lg-4">
+		            			<a href="#" class="link link-sm link--style-2 mt-2">Change email</a>
+		          			</div>
+		      				</div>
+		    				  <div class="row">
+		    				    <div class="col-md-6 col-lg-4">
+			   				      <div class="form-group">
+			   				        <label class="control-label">Email frequency</label>
+			   				        <select class="form-control form-control-lg">
+			   				          <option value="">Daily</option>
+			   				          <option value="">Weekly</option>
+			   				          <option value="">Monthly</option>
+			    			        </select>
+			    			      </div>
+			    			    </div>
+			    			  </div>
+			    			</div>
+    						<hr class="mt-0 mb-0">
+    					</div>
+  			  	</div>
+  			  </div>
+ 				</div>
+			</div>
+		</div>
+	</div>
+	<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  	<%= devise_error_messages! %>
     <div class="card no-border bg-transparent">
       <div class="card-title px-0 pb-0 no-border">
-        <h3 class="heading heading-6 strong-600">
-          Account info
-        </h3>
-        <p class="mt-1 mb-0">
-          Edit your email and also, your newsletter subscriptions.
-        </p>
-      </div>
-      <div class="card-body px-0">
-        <div class="row align-items-center">
-          <div class="col-md-6 col-lg-4">
-            <div class="form-group">
-              <label class="control-label">Email</label>
-              <input type="email" class="form-control form-control-lg" value="name@example.com" disabled>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4">
-            <a href="#" class="link link-sm link--style-2 mt-2">Change email</a>
-          </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-6 col-lg-4">
-          <div class="form-group">
-            <label class="control-label">Email frequency</label>
-            <select class="form-control form-control-lg">
-              <option value="">Daily</option>
-              <option value="">Weekly</option>
-              <option value="">Monthly</option>
-            </select>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <hr class="mt-0 mb-0">
-
-    <!-- Change password -->
- <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-    <div class="card no-border bg-transparent">
-      <div class="card-title px-0 pb-0 no-border">
-        <h3 class="heading heading-6 strong-600">
-        Modifier le mot de passe
-        </h3>
+        <h3 class="heading heading-6 strong-600">Modifier le mot de passe</h3>
       </div>
       <div class="card-body px-0">
         <div class="row">
@@ -114,46 +91,37 @@
               <%= f.password_field :current_password, autocomplete: "current-password", :class =>"form-control form-control-lg" %>
             </div>
           </div>
-
           <div class="col-md-6 col-lg-4">
             <div class="form-group">
-               <label class="control-label">Nouveau mot de passe</label>
-                  <%= f.password_field :password, autocomplete: "new-password",  :class => "form-control form-control-lg" %>
-                  <% if @minimum_password_length %><br/>
+              <label class="control-label">Nouveau mot de passe</label>
+                <%= f.password_field :password, autocomplete: "new-password",  :class => "form-control form-control-lg" %>
+                <% if @minimum_password_length %><br/>
                   <em><%= @minimum_password_length %> characters minimum</em>
                 <% end %>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4">
-            <div class="form-group">
-
-              <label class="control-label">Confirmer le mot de passe</label>
-                <%= f.password_field :password_confirmation, autocomplete: "new-password", :class =>"form-control form-control-lg" %>
-            </div>
-          </div>
-        </div>
-
-        <div class="text-right">
-          <%= f.submit "Valider", :class =>"btn btn-base-1"%>
-        </div>
-      </div>
-    </div>
-    <% end %>
-
-    <hr class="mt-0 mb-0">
-    <!-- Delete account -->
-    <div class="card no-border bg-transparent">
-      <div class="card-title px-0 pb-0 no-border">
-        <h3 class="heading heading-6 strong-600">
-          Supprimer son compte
-        </h3>
-        <p class="mt-1 mb-0">
-        Pour supprimer votre compte, cliquez sur le bouton ci dessous.</p> <br>
-        <%= button_to "Supprimer mon compte", registration_path(resource_name), :class =>"btn btn-base-1", data: { confirm: "Vous allez nous manquer... Êtes vous sur ?" }, method: :delete %>
-        <%= link_to "Back", :back %>
-      </div>
-    </div>
-  </div>
+  	          </div>
+  	        </div>
+  	        <div class="col-md-6 col-lg-4">
+  	          <div class="form-group">
+  	            <label class="control-label">Confirmer le mot de passe</label>
+  	            <%= f.password_field :password_confirmation, autocomplete: "new-password", :class =>"form-control form-control-lg" %>
+  	          </div>
+  	        </div>
+  	      </div>
+  	      <div class="text-right">
+  	        <%= f.submit "Valider", :class =>"btn btn-base-1"%>
+  	      </div>
+  	    </div>
+  	  </div>
+  	  <% end %>
+  	  <hr class="mt-0 mb-0">
+  	  <div class="card no-border bg-transparent">
+  	    <div class="card-title px-0 pb-0 no-border">
+  	      <h3 class="heading heading-6 strong-600">Supprimer son compte</h3>
+  	      <p class="mt-1 mb-0">Pour supprimer votre compte, cliquez sur le bouton ci dessous.</p><br>
+  	      <%= button_to "Supprimer mon compte", registration_path(resource_name), :class =>"btn btn-base-1", data: { confirm: "Vous allez nous manquer... Êtes vous sur ?" }, method: :delete %>
+	        <%= link_to "Back", :back %>
+	      </div>
+	    </div>
+	  </div>
   </div>
 </section>
