--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,6 +15,8 @@
                                 <%= link_to 'Contact', contact_path %>
                             </li>
                         </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
