--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,13 +49,14 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                      <div class="link-menu link-menu--style-3 py-4 border-bottom">
+                                        <%= link_to 'Mon profil',  current_user, :class =>"active" %>
+                                        <%= link_to 'Modifier mon profil', edit_user_registration_path  %>
+                                        <%= link_to 'Following', following_user_path(current_user) %>
+                                        <%= link_to 'Followers', followers_user_path(current_user) %>
+                                      </div>
 
-           <div class="link-menu link-menu--style-3 py-4 border-bottom">
-            <%= link_to 'Mon profil', current_user%>
-            <%= link_to 'Modifier mon profil', current_user %>
-            <%= link_to 'Mes Matchs', match_user_path(current_user) %>
-            <%= link_to 'Following', following_user_path(current_user) %>
-          </div>
+
 
                                             <!-- Account settings -->
                                             <div class="row">
@@ -78,7 +79,7 @@
 
                                                         <!-- Account info -->
                                                         <div class="main-content">
-                                            <!-- Languages section -->
+                                            <!-- Page title -->
                                             <div class="page-title">
                                                 <div class="row align-items-center">
                                                     <div class="col-lg-6 col-12">
@@ -88,6 +89,10 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+
+
+                                            <!-- Languages -->
                                             <div class="row">
                                                 <div class="col-lg-6">
                                                     <div class="card no-border bg-transparent">
@@ -97,13 +102,13 @@
                                                             </h3>
                                                         </div>
                                                         <div class="card-body px-0">
-                                                            <% Language.find(@user.spoken_languages.ids).each do |language| %>
-                                                                <div>
-                                                                	<ul class="checkbox">
-                                                                		<li><%= language.name %></li>
-                                                                	</ul>
-                                                                </div>  
-                                                            <% end %>                
+                                                            
+                                                            <div>
+                                                            	<ul class="checkbox">
+                                                            		<li>Français</li>
+                                                            		<li>Anglais</li>
+                                                            	</ul>
+                                                            </div>                  
                                                         </div>
                                                     </div>
                                                 </div>
@@ -116,13 +121,13 @@
                                                             </h3>
                                                         </div>
                                                         <div class="card-body px-0">
-                                                            <% Language.find(@user.wanted_languages.ids).each do |language| %>
-                                                                <div>
-                                                                    <ul class="checkbox">
-                                                                        <li><%= language.name %></li>
-                                                                    </ul>
-                                                                </div>  
-                                                            <% end %> 
+                                                            
+                                                            <div>
+                                                            	<ul class="checkbox">
+                                                            		<li>Français</li>
+                                                            		<li>Anglais</li>
+                                                            	</ul>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -130,7 +135,7 @@
                                         </div>
                                                         <hr class="mt-0 mb-0">
 
-                                                        <!-- Interests section  -->
+                                                        <!-- Change password -->
                                                         <div class="card no-border bg-transparent">
                                                             <div class="card-title px-0 pb-0 no-border">
                                                                 <h3 class="heading heading-6 strong-600">
@@ -138,21 +143,20 @@
                                                                 </h3>
                                                             </div>
                                                             <div class="card-body px-0">
-                                            <div class="row">
-                                                <div class="col-md-6 col-lg-4"> 
-                                                    <% @user.interests.each do |interest| %>           
-                                                        <span class="badge badge-lg badge-primary"><%= interest.name %></span>
-                                                    <% end %>
+                                                                <div class="row">
+                                                                	<div class="col-md-6 col-lg-4">
+                                                                        <span class="badge badge-lg badge-primary">Music</span>
+                                                                        <span class="badge badge-lg badge-primary">Music</span>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </form>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+                    </section>
