--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -22,7 +22,7 @@
     opacity: 0.75;
     filter: alpha(opacity=75);
     width: 100%;
-    height: 50%;
+    height: 30%;
 
 }
 
@@ -35,33 +35,39 @@
 }
 
 .image{
-     background-color: #3452ff;
+     background-color: #FF5A26;
+}
+
+.pt-5{
+    padding-top: 3rem !important;
 }
 
 .centered {
-    position: absolute;
-    top: 50%;
-    left: 35%;
+    position: relative;
     transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+
 }
 
 
 .inscription {
-    display: flex;
     position: absolute;
+    display: flex;
     align-items: center;
-    top: 50%;
-    right: 5%;
+    justify-content: center;
     transform: translate(-50%, -50%);
     background-color: #ffff;
     color: #fff;
-    width:12em;
     height: 15em;
+
     border-radius: 1.5em;
     box-shadow: 5px 5px 10px #03050F;
     opacity: 0.95;
-    filter: alpha(opacity=85);
+    filter: alpha(opacity=95);
+    bottom: -17%;
 }
+
 
 .boutons {
     display: flex;
@@ -71,9 +77,25 @@
 
 }
 
-#footer{
-    position: static !important;
-    width: 100% !important;
-    margin-top: 10%;
-    bottom: 0 !important;
+
+.bg-base-1, .btn-base-1, .badge-primary{
+    background-color: #FF5A26 !important;
+}
+
+.link-menu--style-3 a{
+    background-color: #FF5A26 !important;
+    color: #ffff;
+}
+
+.link-menu--style-3 .active{
+    background-color: #292f36 !important;
+}
+
+.btn-base-1:hover{
+    background-color: #292f36 !important;
+}
+
+.form-header{
+    background-color: #FF5A26 !important;
+    color: #ffff;
 }
