--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,16 +3,13 @@
     <div class="row justify-content-center cols-xs-space">
       <div class="col-lg-6">
           <div class="form-card form-card--style-2 z-depth-2-top">
-            <div class="form-header text-center">
+            <div class="bande text-center heading heading-4 strong-400 mb-4"> S'enregistrer
               <div class="form-header-icon">
                 <i class="icon ion-log-in"></i>
               </div>
             </div>
 
             <div class="form-body">
-              <div class="text-center px-2">
-                <h4 class="heading heading-4 strong-400 mb-4">S'enregistrer</h4>
-              </div>
                 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                 <%= devise_error_messages! %>
               <form class="form-default mt-4" data-toggle="validator" role="form">
